welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:24: error: not found: value stop
			stop()
                        ^